only load external stylesheets while needed, normalize global styles to avoid flickering when stylesheets get loaded

--- a/packages/examples/src/components/AppMenu/AppMenuLinks.scss
+++ b/packages/examples/src/components/AppMenu/AppMenuLinks.scss
@@ -10,6 +10,7 @@
         text-decoration: none;
         &:hover {
             background: rgba(black, 0.1);
+            text-decoration: none;
         }
         &:active,
         &:focus {
